@@ -36,9 +36,6 @@ public:
   typedef Psana::Acqiris::DataDescV1Elem PsanaType;
 
   DataDescV1Elem_v0() {}
-  // this is not useful but needs to be defined
-  DataDescV1Elem_v0(hdf5pp::Group group, hsize_t idx, const boost::shared_ptr<Config>& cfg)
-    : m_cfg(cfg) {}
   DataDescV1Elem_v0(const ndarray<const Psana::Acqiris::TimestampV1, 1>& ds_timestamp,
       const ndarray<const int16_t, 2>& ds_waveforms,
       const boost::shared_ptr<Config>& cfg)
@@ -87,6 +84,78 @@ private:
   void read_ds_data() const;
 
 };
+
+
+
+namespace ns_DataDescV1Elem_v1 {
+struct dataset_data {
+
+  static hdf5pp::Type native_type();
+  static hdf5pp::Type stored_type();
+
+  uint32_t nbrSamplesInSeg;
+  uint32_t indexFirstPoint;
+  uint32_t nbrSegments;
+
+};
+}
+
+template <typename Config>
+class DataDescV1Elem_v1 : public Psana::Acqiris::DataDescV1Elem {
+public:
+  typedef Psana::Acqiris::DataDescV1Elem PsanaType;
+
+  DataDescV1Elem_v1() {}
+  DataDescV1Elem_v1(const ndarray<const Psana::Acqiris::TimestampV1, 1>& ds_timestamp,
+      const ndarray<const int16_t, 2>& ds_waveforms,
+      const ns_DataDescV1Elem_v1::dataset_data& ds_data)
+    : m_ds_data(ds_data), m_ds_timestamp(ds_timestamp), m_ds_waveforms(ds_waveforms) {}
+
+  virtual ~DataDescV1Elem_v1() {}
+
+  virtual uint32_t nbrSamplesInSeg() const { return m_ds_data.nbrSamplesInSeg; }
+  virtual uint32_t indexFirstPoint() const { return m_ds_data.indexFirstPoint; }
+  virtual uint32_t nbrSegments() const { return m_ds_data.nbrSegments; }
+  virtual ndarray<const Psana::Acqiris::TimestampV1, 1> timestamp() const { return m_ds_timestamp; }
+  virtual ndarray<const int16_t, 2> waveforms() const { return m_ds_waveforms; }
+
+private:
+
+  ns_DataDescV1Elem_v1::dataset_data m_ds_data;
+  mutable ndarray<const Psana::Acqiris::TimestampV1, 1> m_ds_timestamp;
+  mutable ndarray<const int16_t, 2> m_ds_waveforms;
+};
+
+
+
+template <typename Config>
+class DataDescV1_v1 : public Psana::Acqiris::DataDescV1 {
+public:
+  typedef Psana::Acqiris::DataDescV1 PsanaType;
+
+  DataDescV1_v1() {}
+  DataDescV1_v1(hdf5pp::Group group, hsize_t idx, const boost::shared_ptr<Config>& cfg)
+    : m_group(group), m_idx(idx), m_cfg(cfg) {}
+
+  virtual ~DataDescV1_v1() {}
+
+  /** Waveform data, one object per channel. */
+  virtual const Psana::Acqiris::DataDescV1Elem& data(uint32_t i0) const;
+
+  /** Method which returns the shape (dimensions) of the data returned by data() method. */
+  virtual std::vector<int> data_shape() const;
+
+private:
+
+  mutable hdf5pp::Group m_group;
+  hsize_t m_idx;
+  boost::shared_ptr<Config> m_cfg;
+
+  mutable ndarray<DataDescV1Elem_v1<Config>, 1> m_ds_data;
+  void read_ds_data() const;
+
+};
+
 
 
 } // namespace Acqiris
