@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-25
+2013-03-28 Andy Salnikov
+- fixing acqiris schema, adding new schema version for DataDescV1
+
 Tag: V00-01-24
 2013-03-27 Andy Salnikov
 - add support for EPICS aliases
